# ccfocus

./: .gitignore  .swiftlint.yml  CLAUDE.md  Cargo.toml  Makefile  README.md  renovate.json
.github/workflows/: release.yml  test.yml
ccfocus/: project.yml
ccfocus-app/: project.yml
ccfocus-app/ccfocus-app/: CcfocusApp.swift  Info.plist  KeyActionResolver.swift  KeyHandlingHostingView.swift  MenuBarView.swift  PopoverState.swift  SettingsView.swift  SettingsWindowController.swift
ccfocus-app/ccfocus-appTests/: EventLogReaderTests.swift  KeyActionResolverTests.swift  LivenessCheckerTests.swift  LogRotatorTests.swift  LogTailTests.swift  ManualPairingsStoreTests.swift  PopoverStateTests.swift  SessionRegistryTests.swift  SessionStatusTests.swift  SmokeTests.swift
ccfocus-logger/: Cargo.toml
ccfocus-logger/src/: claude_proc.rs  cli.rs  detach.rs  event.rs  ghostty.rs  lib.rs  log_path.rs  log_reader.rs  main.rs  transcript.rs
ccfocus-logger/src/commands/: install.rs  mod.rs  pre_tool_use.rs  session_start.rs  stop.rs  uninstall.rs
ccfocus-logger/tests/: cli_detach.rs  detach.rs  event_serde.rs  log_path.rs  log_writer.rs  stop_command.rs
ccsplit-app/: project.yml
ccsplit-logger/: Cargo.toml
ccsplit-logger/src/: cli.rs  detach.rs  ghostty.rs  git.rs  lib.rs  log_path.rs  log_writer.rs  main.rs  timestamp.rs
ccsplit-logger/src/commands/: install.rs  mod.rs  notification.rs  session_start.rs  stop.rs  user_prompt_submit.rs
ccsplit-logger/tests/: cli_detach.rs  detach.rs  event_serde.rs  log_path.rs  log_writer.rs
docs/: ccfocus-design.md  ccfocus-impl-plan.md  ccfocus-next-session.md  ccsplit-design.md  ccsplit-impl-plan.md  ccsplit-next-session.md
scripts/: build-release.sh
verify/: results.md  verify_focus.applescript  verify_focus_swift.swift  verify_ghostty.applescript  verify_hook.sh
(+65 files in other folders)
