[workspace]
resolver = "2"
members = ["ccfocus-logger"]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Yoshiteru Negishi"]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros", "local-offset"] }
