[package]
name = "ccfocus-logger"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "ccfocus_logger"
path = "src/lib.rs"

[[bin]]
name = "ccfocus-logger"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
once_cell = "1"
regex = "1"
serde.workspace = true
serde_json.workspace = true
time.workspace = true

[dev-dependencies]
tempfile = "3"
