[package]
name = "ccsplit-logger"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "ccsplit_logger"
path = "src/lib.rs"

[[bin]]
name = "ccsplit-logger"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true

[dev-dependencies]
tempfile = "3"
